# proyecto_robotica

./: .gitignore  README.md  dualsense_ws_windows.py  frames_2026-04-17_20.50.02.gv  frames_2026-04-17_20.55.16.gv  install_setup.sh  manual_tecnico.tex  motor_record_1773535167.csv  motor_record_1773535365.csv  motor_record_1773536188.csv  motor_record_1773536324.csv  motor_record_1773536492.csv  motor_record_1773539068.csv  system_id_1775936660.csv  vision_client_windows.py
.claude/: settings.json
install/: local_setup.sh  setup.sh
install/locomotion/lib/locomotion/: graphical_odom  launch  motor_com  rc_control
install/locomotion/share/locomotion/: package.sh
install/motor_command/share/motor_command/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sensors/share/sensors/: package.sh  package.xml
log/: latest_build
src/locomotion/: package.xml  setup.py
src/locomotion/launch/: control.test.py  robot.launch.py
src/locomotion/locomotion/: motor_command.py  motor_control.py  rc_control.py  trajectory.py
src/motor_command/: package.xml  setup.py
src/motor_command/motor_command/: motor_command.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: ekf.yaml
src/my_robot_description/launch/: description.launch.py
src/my_robot_description/urdf/: robot.urdf
src/nav2_config/: CMakeLists.txt  package.xml
src/nav2_config/config/: nav2_params.yaml  slam_params.yaml
src/nav2_config/launch/: diagnostics.launch.py  nav2_bringup.launch.py  processing.launch.py
src/proyecto_final_grupo5/: package.xml  setup.cfg  setup.py
src/proyecto_final_grupo5/launch/: bringup.launch.py
src/sensors/: package.xml  setup.py
src/sensors/launch/: sensors.py
src/sensors/sensors/: arm_bridge.py  camera.py  encoders.py  images.py  imu_viz.py  lidar.py  lidar_viz.py  mpu.py  odometry.py  orb_slam.py  servo_node.py  shape_color_detector.py  stepper_node.py  vision_bridge.py
src/tests/: package.xml  setup.py
src/tests/tests/: system_ident.py
